# gitops-deploy-action

./: .gitignore  Dockerfile  Makefile  README.md  action.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
integration/: test.t
src/set_stack_parameter/: __init__.py  cli.py
src/set_stack_parameter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
test/: run.t
tests/: test_rewrite.py
tests/files/: example-kv.yaml  example.yaml
